h1(#changelog). Changelog

* Renamed broadcast feature to wildcard, more adequate with the way it works
** push_stream_broadcast_channel_prefix -> push_stream_wildcard_channel_prefix
** push_stream_broadcast_channel_max_qtd -> push_stream_wildcard_channel_max_qtd
** push_stream_max_number_of_broadcast_channels -> push_stream_max_number_of_wildcard_channels
* Removed push_stream_content_type directive, use default_type Nginx directive to set the value, except on JSONP and Event Source modes
* Removed push_stream_keepalive directive, let Nginx decide when to use keepalive and how many requests accept using keepalive_* directives
* Removed push_stream_shared_memory_cleanup_objects_ttl directive
* Changed push_stream_websocket directive to be a subtype of push_stream_subscriber directive
* Changed push_stream_eventsource_support directive to be a subtype of push_stream_subscriber directive
* Fix to support gzip usage
* Added the feature to send a custom 'channel delete message' on the body of the DELETE request
* Changed push_stream_channel_id variable to directive, and make possible set it inside an if block
* Changed push_stream_channels_path variable to directive, and make possible set it inside an if block
* Back to use Nginx chunked filter

h2. Version 0.3.5

* Use JSONP when port numbers don't match.
* Set expires headers to avoid cache
* Add push_stream_channel_info_on_publish, push_stream_channel_inactivity_time and push_stream_allowed_origins directives
* Not sending the access control headers by default, send only when the allowed_origins directive is set, for security reasons
* Send a ping frame as feedback when publishing a message through WebSocket connection
* Adding the number of stored messages and the number of channels and messages in the trash to summarized channels statistics
* Remove default header template for EventSource subscribers
* Force content type as application/javascript on jsonp requests
* Simplifying some internal structures