@@ -129,7 +129,7 @@ static ngx_command_t    ngx_http_push_stream_commands[] = {
         offsetof(ngx_http_push_stream_loc_conf_t, channels_path),
         NULL },
     { ngx_string("push_stream_store_messages"),
-        NGX_HTTP_MAIN_CONF|NGX_HTTP_SRV_CONF|NGX_HTTP_LOC_CONF|NGX_CONF_TAKE1,
+        NGX_HTTP_MAIN_CONF|NGX_HTTP_SRV_CONF|NGX_HTTP_LOC_CONF|NGX_HTTP_LIF_CONF|NGX_CONF_TAKE1,
         ngx_conf_set_flag_slot,
         NGX_HTTP_LOC_CONF_OFFSET,
         offsetof(ngx_http_push_stream_loc_conf_t, store_messages),
